# claimflow

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial_claims.py
docker/: entrypoint.sh
docs/: ALIBABA_CLOUD_PROOF.md  DEPLOYMENT.md  HITL_INTERRUPT.md  PROJECT_AUDIT.md  PROJECT_STATUS.md  architecture.md  demo-logs.txt
docs/.demo_video_temp/: page@abb6a3e8761256e154bf7515aeaa7445.webm
src/claimflow/: __init__.py
src/claimflow/agents/: __init__.py  graph.py  states.py
src/claimflow/api/: dependencies.py  file_validation.py  main.py  middleware.py
src/claimflow/api/routers/: __init__.py  health.py
src/claimflow/api/routes/: __init__.py  claims.py  health.py  metrics.py  review.py  uploads.py
src/claimflow/core/: __init__.py  checkpoint.py  config.py  context.py  i18n.py  logging.py  metrics.py
src/claimflow/db/: __init__.py  models.py  repository.py  session.py
src/claimflow/models/: __init__.py  agent_schemas.py  enums.py  schemas.py
src/claimflow/services/: __init__.py  alibaba_cloud_integration.py  claim_store.py  llm_service.py  mock_scenarios.py  vision_service.py
src/claimflow/tools/: __init__.py  factory.py  local_storage.py  oss_storage.py  storage_interface.py  weather_tool.py
tests/: test_auth.py  test_claims_submit.py  test_file_validation.py  test_graph.py  test_graph_interrupt.py  test_health.py  test_i18n.py  test_llm_fallback.py  test_mock_graph.py  test_observability.py  test_oss_storage.py  test_postgres_persistence.py  test_review.py  test_storage.py  test_vision_service.py  test_weather_tool.py
