[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimflow"
version = "0.1.0"
description = "Autopilot Agent B2B for insurance claims processing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Claimflow Team" }]
keywords = ["insurance", "claims", "langgraph", "fastapi", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "dashscope>=1.20.0",
    "alibabacloud-oss-v2>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
claimflow = "claimflow.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/claimflow"]

[tool.hatch.build.targets.sdist]
only-include = ["src/claimflow", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["B008", "TC001", "TC002"]  # Allow function calls in default arguments (FastAPI Depends)

[tool.ruff.lint.isort]
known-first-party = ["claimflow"]
